<resources>
    <string name="app_name">Bitcoin Dashboard</string>
    <string-array name="menu_main">
        <item>View exchange rate</item>
        <item>View price chart</item>
        <item>Block explorer</item>
        <item>Check an address\'s balance</item>
        <item>Quit</item>
    </string-array>
    <string name="show_chart_thru">Show price history for&#8230;</string>
    <string name="radio_1d">1 day</string>
    <string name="radio_5d">5 days</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="button_prev">Previous</string>
    <string name="button_next">Next</string>
    <string name="enter_block_number">Enter block number</string>
    <string name="block_number">Block number</string>
    <string name="hash">Hash</string>
    <string name="timestamp">Timestamp</string>
    <string name="prev_block">Previous block</string>
    <string name="next_block">Next block</string>
    <string name="recent_addresses">Recently viewed addresses</string>
    <string name="address">Address</string>
    <string name="balance">Balance</string>
    <string name="enter_address">Enter address</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
</resources>
