<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_arrow_back_black_24dpi"
        android:title="@string/action_previous"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_arrow_forward_black_24dpi"
        android:title="@string/action_next"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_new"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>