<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.temple.bitcoindashboard.BlockFragment">

    <EditText
        android:id="@+id/enter_block_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_block_number"
        android:inputType="number"
        android:selectAllOnFocus="false" />

    <TextView
        android:id="@+id/display_next_block_nb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_block"
        android:layout_below="@+id/enter_block_no"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/display_nb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_number"
        android:layout_below="@+id/display_next_block_nb"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/display_hash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hash"
        android:layout_below="@+id/display_nb"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/display_time_utc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:layout_below="@+id/display_hash"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/prev_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_block_no"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/display_prev_block_nb" />

</RelativeLayout>
