<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.temple.bitcoindashboard.PriceChartFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_chart_thru"
        android:text="@string/show_chart_thru"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent"
        android:id="@+id/imageView"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/show_chart_thru"
        android:layout_alignParentStart="true">

        <RadioButton
            android:text="@string/radio_1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_1d"
            android:checked="true" />
        <RadioButton
            android:text="@string/radio_5d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_5d" />
    </RadioGroup>
</RelativeLayout>
